# minecraft_blockfinder

./: Cargo.toml
shaders/: chunk.wgsl  find.wgsl
src/: block_list.rs  builder.rs  constants.rs  game_assets.rs  grid.rs  main.rs  shader_assets.rs  testdata.txt
src/finder/: chunk.rs  mod.rs  plugin.rs  util.rs
src/finder/plugin/: gpu.rs
