[package]
name = "minecraft_blockfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
bevy = "0.14.0"
bevy_flycam = { path = "../bevy_flycam" }
bevy_meshem = { path = "../bevy_meshem" }
bevy_mod_raycast = { path = "../bevy_mod_raycast" }
flate2 = "1.0.30"
human_format = "1.1.0"
image = "0.24.7"
java-rand = "0.2.0"
minecraft-assets = "0.0.6"
minecraft_folder_path = "0.1.2"
rand = "0.8.5"
three-d-asset = "0.6.0"
zip = "2.1.5"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
strip = "symbols"

[features]

test_assets = []
